--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,5 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest --cov --cov-report=xml
+        pytest */*/*.py --cov --cov-report=xml
 
