--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install black ruff pytest pytest-cov typer
+        python -m pip install black ruff pytest numpy
 
     - name: Lint with black and ruff
       run: |
@@ -34,5 +34,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest */*/*.py --cov --cov-report=xml
-
+        pytest */*/*.py 
